loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: '(' expected but identifier found.
while not(isFacingWall()) {
      ^LoopWhile:5: error: illegal start of simple expression
	}
        ^